plugins {
  id("java-library")
  id("configure-java")
  id("groovy")
  id("org.springframework.boot")
  id 'org.graalvm.buildtools.native'
  id 'io.gatling.gradle' version '3.15.0'
}

description = "Standard configuration of standalone version of MQTT Broker"

dependencies {
  implementation projects.coreService
  implementation projects.aclService
  implementation projects.aclAntlrDsl
  implementation projects.authenticationService
  implementation libs.rlib.logger.slf4j
  implementation libs.springboot.starter.core
  implementation libs.springboot.starter.log4j2

  runtimeOnly projects.credentialsSourceDb
  runtimeOnly projects.credentialsSourceFile
  runtimeOnly projects.authenticationProviderBasic

  testImplementation projects.testSupport
  testImplementation testFixtures(projects.network)
  testImplementation libs.junit.platform.testkit
}

tasks.withType(GroovyCompile).configureEach {
  options.forkOptions.jvmArgs += "--enable-preview"
  groovyOptions.parameters = true
}

bootRun {
  jvmArgs += "--enable-preview"
}

bootJar {
  mainClass = "javasabr.mqtt.broker.application.MqttBrokerApplication"
}

graalvmNative {
  toolchainDetection = true
  binaries {
    main {
      sharedLibrary = false
      buildArgs.add("--enable-preview")
      javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.matching("GraalVM Community")
      }
    }
  }
}

jar {
  from(sourceSets.aot.output)
}

processAot {
  jvmArgs([
      '-Dauthentication.credentials-source.file.enabled=true',
      '-Dauthentication.provider.basic.enabled=true',
      '-Dmqtt.external.tls.network.enabled=true',
      '-Dacl.engine.type=groovy-dsl'
  ])
}

tasks.register('copyNativeImageTestResources', Copy) {
  mustRunAfter 'nativeCompile'
  from('src/test/resources/application-test.properties') {
    rename 'application-test.properties', "application.properties"
  }
  from('src/test/resources/log4j2-test.xml') {
    rename 'log4j2-test.xml', "log4j2.xml"
  }
  from('src/test/resources/auth/credentials-test') {
    into 'auth'
  }
  from('src/test/resources/test-acl.gacl')
  into layout.buildDirectory.dir("native/nativeCompile")
}

tasks.register('nativeImageTest', Test) {
  dependsOn 'nativeCompile', 'copyNativeImageTestResources'
  finalizedBy 'test'
}

sourceSets {
  loadTest {
    compileClasspath += sourceSets.test.output
    runtimeClasspath += sourceSets.test.output
  }
}

configurations {
  loadTestImplementation.extendsFrom testImplementation
  loadTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
  gatlingImplementation libs.gatling.charts.highcharts
  gatlingImplementation libs.gatling.mqtt.java
}

ext {
    reportsDir = layout.buildDirectory.dir("reports")
}

tasks.register('loadTest', Test) {
  group = 'verification'
  testClassesDirs = sourceSets.loadTest.output.classesDirs
  classpath = sourceSets.loadTest.runtimeClasspath
  useJUnitPlatform()
}
